components/main/Rules/Rules.module.scss
.rules {
    margin: 0 auto;

    padding: 0px 24px;

    margin-top: 127px;
    margin-bottom: 117px;

    min-width: 320px;
    width: 100%;
    max-width: 1278px;

    display: grid;
    grid-template-areas:
        'title subtitle'
        'title button';

    align-items: center;

    &__title {
        font-family: 'Montserrat';
        font-style: normal;
        font-weight: 700;
        font-size: 85px;
        line-height: 110%;

        color: #1491FF;

        width: 100%;
        max-width: 600px;

        grid-area: title;
    }

    &__subtitle {
        grid-area: subtitle;

        font-family: 'Montserrat';
        font-style: normal;
        font-weight: 600;
        font-size: 28px;
        line-height: 34px;

        color: #000000;
    }

    &__button {
        grid-area: button;

        width: fit-content;
    }
}

@import './RulesMedia.module.scss';

